--- a/manifest.json
+++ b/manifest.json
@@ -2,30 +2,30 @@
   "name": "OoT Randomizer - Map and Item Tracker",
   "game_name": "Ocarina of Time Randomizer",
   "package_version": "3.7.3.0",
-  "package_uid": "ootrando_overworldmap_hamsda",
-  "author": "Hamsda",
+  "package_uid": "ootrando_overworldmap_hamm1sda",
+  "author": "Hamsda, Minnie A. Trethewey",
   "platform": "n64",
   "variants": {
     "standard": {
       "display_name": "Map Tracker"
     },
-    "var_keysanity": {
-      "display_name": "Map Tracker (Keysanity)"
-    },
+    // "var_keysanity": {
+    //   "display_name": "Map Tracker (Keysanity)"
+    // },
     "var_itemsonly": {
       "display_name": "Items Only"
     },
-    "var_itemsonly_keysanity": {
-      "display_name": "Items Only (Keysanity)"
-    },
+    // "var_itemsonly_keysanity": {
+    //   "display_name": "Items Only (Keysanity)"
+    // },
     "var_minimalist": {
       "display_name": "Items Only (minimal)"
-    },
-    "var_entrance": {
-      "display_name": "Entrance Randomizer"
-    },
-    "var_entrance_keysanity": {
-      "display_name": "Entrance Randomizer (Keysanity)"
+    // },
+    // "var_entrance": {
+    //   "display_name": "Entrance Randomizer"
+    // },
+    // "var_entrance_keysanity": {
+    //   "display_name": "Entrance Randomizer (Keysanity)"
     }
   }
 }
